<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">My Order</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>

    <string name="toppings">Toppings (+ $3.00 Pizza)</string>
    <string name="pepperoni">$2.00 Pepperoni</string>
    <string name="sausage">$1.50 Sausage</string>
    <string name="mushroom">$0.50 Mushroom</string>
    <string name="olive">$0.50 Olive</string>

    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">1</string>
    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="order">Order</string>
    <string name="summary">Summary</string>

    <string name="orderSummary">Order Summary</string>
    <string name="goToOrder">Go To Order</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="thank_you">Thank you, <xliff:g example="Vijaya" id="name">%s</xliff:g>!</string>

    <string name="order_summary_pepperoni">Add Pepperoni? <xliff:g example="yes" id="addPepperoni">%s</xliff:g></string>
    <string name="order_summary_sausage">Add Sausage? <xliff:g example="yes" id="addSausage">%s</xliff:g></string>
    <string name="order_summary_mushroom">Add Mushroom? <xliff:g example="yes" id="addMushroom">%s</xliff:g></string>
    <string name="order_summary_olive">Add Olive? <xliff:g example="yes" id="addOlive">%s</xliff:g></string>

    <string name="order_summary_name">Name: <xliff:g example="Vijaya" id="name">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <string name="order_summary_total_price">Total: $<xliff:g example="10" id="price">%.2f</xliff:g></string>

    <string name="too_much_pizza">Please select less than thirty pizzas</string>
    <string name="too_little_pizza">Please select at least one pizza</string>

    <string name="email_subject"><xliff:g example="Vijaya" id="name">%s</xliff:g>\'s Pizza Order</string>
    <string name="no_email_client">Could not open an email client</string>
</resources>